service/kline/k8s/02-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kline-service-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: kline-service-traefik-app
    k8s.kuboard.cn/workload: kline-service-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-oplog@kubernetescrd,
      kube-system-strip-kline-service-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/kline/v1
            backend:
              serviceName: kline-service
              servicePort: 50870
    - host: api.linerameme.fun
      http: *http_rules
    - host: api.lineraswap.fun
      http: *http_rules
    - host: api.linerablob.fun
      http: *http_rules
